[package]
name = "adafruit-alphanum4"
version = "0.1.0"
authors = ["cs2dsb <cs2dsb@gmail.com>"]
edition = "2018"
description = "Small wrapper on top of the `ht16k33` crate to drive an Adafruit 14-segment LED Alphanumeric Backpack"
categories = ["hardware-support"]
keywords = ["embedded-hal", "adafruit", "ht16k33", "no_std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cs2dsb/adafruit-alphanum4.rs"

[dependencies]
ht16k33 = { version = "0.4.0", default-features = false }
embedded-hal  = { version = "0.2.3" }
ascii = { version = "1.0.0", default-features = false }